Add Data Modelling logic to Jupyter Notebook

--- a/jupyter_notebooks/02-DataVisualization.ipynb
+++ b/jupyter_notebooks/02-DataVisualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Visualization Notebook"
+    "# **Data Visualization Notebook**"
    ]
   },
   {
@@ -39,14 +39,7 @@
     "\n",
     "## Additional Comments | Insights | Conclusions\n",
     "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "N/A"
+    "N/A\n"
    ]
   },
   {
@@ -144,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -153,14 +146,14 @@
        "'/workspace/Portfolio_5_Cherry_Leaves_Mildew'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "work_dir = os.getcwd()\n",
-    "work_dir"
+    "current_dir = os.getcwd()\n",
+    "current_dir"
    ]
   },
   {
@@ -213,7 +206,7 @@
     "version = 'v1'\n",
     "file_path = f'outputs/{version}'\n",
     "\n",
-    "if 'outputs' in os.listdir(work_dir) and version in os.listdir(work_dir + '/outputs'):\n",
+    "if 'outputs' in os.listdir(current_dir) and version in os.listdir(current_dir + '/outputs'):\n",
     "    print('Old version is already available create a new version.')\n",
     "    pass\n",
     "else:\n",
