Create src folder and subdirectory for data management and machine lerining

--- a/jupyter_notebooks/02-DataVisualization.ipynb
+++ b/jupyter_notebooks/02-DataVisualization.ipynb
@@ -83,7 +83,8 @@
     "import seaborn as sns\n",
     "import joblib\n",
     "sns.set_style(\"white\")\n",
-    "from matplotlib.image import imread\n"
+    "from matplotlib.image import imread\n",
+    "import cv2"
    ]
   },
   {
@@ -395,10 +396,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import cv2\n",
-    "import os\n",
-    "\n",
     "def load_image_as_array(my_data_dir, new_size=(50, 50), n_images_per_label=20):\n",
     "\n",
     "    X, y = [], []\n",
