Model leraning curve and evaluation to DataModelling

--- a/jupyter_notebooks/03-DataModelling.ipynb
+++ b/jupyter_notebooks/03-DataModelling.ipynb
@@ -373,7 +373,9 @@
     "        test_dir,\n",
     "        target_size=(50, 50),\n",
     "        batch_size=20,\n",
-    "        class_mode='binary')"
+    "        class_mode='binary')\n",
+    "\n",
+    "test_generator.class_indices"
    ]
   },
   {
@@ -386,7 +388,9 @@
     "        train_dir,\n",
     "        target_size=(50, 50),\n",
     "        batch_size=20,\n",
-    "        class_mode='binary')"
+    "        class_mode='binary')\n",
+    "\n",
+    "train_generator.class_indices"
    ]
   },
   {
@@ -399,7 +403,9 @@
     "        validation_dir,\n",
     "        target_size=(50, 50),\n",
     "        batch_size=20,\n",
-    "        class_mode='binary')"
+    "        class_mode='binary')\n",
+    "\n",
+    "validation_generator.class_indices"
    ]
   },
   {
@@ -724,18 +730,20 @@
     "    \"\"\"\n",
     "    Custom callback to stop training when a specified accuracy threshold is reached.\n",
     "    \"\"\"\n",
-    "    def __init__(self, threshold):\n",
+    "    def __init__(self, threshold, min_epochs):\n",
     "        super(AccuracyThresholdCallback, self).__init__()\n",
     "        self.threshold = threshold\n",
+    "        self.min_epochs = min_epochs\n",
     "\n",
     "    def on_epoch_end(self, epoch, logs=None):\n",
     "        # Check if the accuracy threshold has been reached\n",
-    "        if logs.get('accuracy') is not None and logs.get('accuracy') >= self.threshold:\n",
-    "            print(f\"\\nReached {self.threshold * 100}% accuracy. Stopping training.\")\n",
-    "            self.model.stop_training = True\n",
+    "        if epoch >= self.min_epochs - 1:  # epochs are zero-indexed\n",
+    "            if logs.get('accuracy') is not None and logs.get('accuracy') >= self.threshold:\n",
+    "                print(f\"\\nEpoch {epoch+1}: Reached {self.threshold * 100}% accuracy. Stopping training.\")\n",
+    "                self.model.stop_training = True\n",
     "\n",
     "# Instantiate the callback with your desired threshold\n",
-    "accuracy_threshold_callback = AccuracyThresholdCallback(threshold=0.97)"
+    "accuracy_threshold_callback = AccuracyThresholdCallback(threshold=0.99, min_epochs=5)"
    ]
   },
   {
@@ -751,14 +759,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_batch, y_batch = next(train_generator)\n",
-    "print(x_batch.shape)\n",
+    "from tensorflow.keras.callbacks import Callback\n",
     "\n",
-    "model.fit(train_generator,\n",
-    "          epochs=25,\n",
-    "          steps_per_epoch = len(train_generator.classes) // batch_size,\n",
-    "          callbacks=[accuracy_threshold_callback],\n",
-    "          verbose=1)"
+    "class DetailedHistory(Callback):\n",
+    "    def on_train_batch_end(self, batch, logs=None):\n",
+    "        # Log training metrics more frequently (e.g., every 10 batches)\n",
+    "        if batch % 10 == 0:\n",
+    "            print(f\"Batch {batch}: Loss = {logs['loss']}, Accuracy = {logs['accuracy']}\")\n",
+    "\n",
+    "    def on_epoch_end(self, epoch, logs=None):\n",
+    "        # Log validation metrics at the end of each epoch\n",
+    "        print(f\"Epoch {epoch}: Val Loss = {logs['val_loss']}, Val Accuracy = {logs['val_accuracy']}\")\n",
+    "\n",
+    "detailed_history = DetailedHistory()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "history = model.fit(\n",
+    "    train_generator,\n",
+    "    epochs=25,\n",
+    "    steps_per_epoch=len(train_generator.classes) // batch_size,\n",
+    "    validation_data=validation_generator,  # Make sure this is provided\n",
+    "    validation_steps=len(validation_generator.classes) // batch_size,\n",
+    "    callbacks=[detailed_history, accuracy_threshold_callback],\n",
+    "    verbose=1\n",
+    ")"
    ]
   },
   {
@@ -812,20 +842,20 @@
    "outputs": [],
    "source": [
     "loss = pd.DataFrame(model.history.history)\n",
-    "\n",
     "sns.set_style(\"darkgrid\")\n",
-    "loss[['loss', 'val_loss']].plot(style='.-')\n",
-    "plt.title(\"Loss\")\n",
-    "plt.savefig(f'{file_path}/model_training_losses.png',\n",
-    "            bbox_inches='tight', dpi=150)\n",
-    "plt.show()\n",
     "\n",
-    "print(\"\\n\")\n",
-    "loss[['accuracy', 'val_accuracy']].plot(style='.-')\n",
-    "plt.title(\"Accuracy\")\n",
-    "plt.savefig(f'{file_path}/model_training_acc.png',\n",
-    "            bbox_inches='tight', dpi=150)\n",
-    "plt.show()"
+    "# Plot only if 'val_loss' is present\n",
+    "if 'val_loss' in loss.columns:\n",
+    "    loss[['loss', 'val_loss']].plot(style='.-')\n",
+    "    plt.title(\"Loss\")\n",
+    "    plt.savefig(f'{file_path}/model_training_losses.png', bbox_inches='tight', dpi=150)\n",
+    "    plt.show()\n",
+    "\n",
+    "if 'val_accuracy' in loss.columns:\n",
+    "    loss[['accuracy', 'val_accuracy']].plot(style='.-')\n",
+    "    plt.title(\"Accuracy\")\n",
+    "    plt.savefig(f'{file_path}/model_training_acc.png', bbox_inches='tight', dpi=150)\n",
+    "    plt.show()\n"
    ]
   },
   {
@@ -839,7 +869,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "* Load saved model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.models import load_model\n",
+    "model = load_model('outputs/v1/malaria_detector_model.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Evaluate model on test set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation = model.evaluate(test_generator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Save evaluation pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "joblib.dump(value=evaluation ,\n",
+    "            filename=f\"outputs/v1/evaluation.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Prediction on a Random Image File"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Load a random image as PIL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.preprocessing import image\n",
+    "\n",
+    "pointer = 66 \n",
+    "label = labels[0] # select Uninfected or Parasitized\n",
+    "\n",
+    "pil_image = image.load_img(test_dir + '/'+ label + '/'+ os.listdir(test_dir+'/'+ label)[pointer],\n",
+    "                          target_size=image_shape, color_mode='rgb')\n",
+    "print(f'Image shape: {pil_image.size}, Image mode: {pil_image.mode}')\n",
+    "pil_image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Convert image to array and prepare for prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_image = image.img_to_array(pil_image)\n",
+    "my_image = np.expand_dims(my_image, axis=0)/255\n",
+    "print(my_image.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Predict class probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred_proba = model.predict(my_image)[0,0]\n",
+    "\n",
+    "target_map = {v: k for k, v in train_dir.class_indices.items()}\n",
+    "pred_class =  target_map[pred_proba > 0.5]  \n",
+    "\n",
+    "if pred_class == target_map[0]: pred_proba = 1 - pred_proba\n",
+    "\n",
+    "print(pred_proba)\n",
+    "print(pred_class)"
    ]
   },
   {
