Add files to sluignore to reduce packgage size

--- a/jupyter_notebooks/03-DataModelling.ipynb
+++ b/jupyter_notebooks/03-DataModelling.ipynb
@@ -95,8 +95,7 @@
     "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Flatten, Dense, Dropout\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint\n",
     "from sklearn.metrics import classification_report, confusion_matrix, roc_curve, auc, precision_score, recall_score, f1_score\n",
-    "import joblib\n",
-    "import random"
+    "import joblib\n"
    ]
   },
   {
